samples/_failures_safe/1761218698_281a94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3aa6fc0.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_f3aa6fc0.c:148:20: error: missing terminating " character
  148 |             printf("Invalid algorithm\n
      |                    ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f3aa6fc0.c:148:13: error: expected expression at end of input
  148 |             printf("Invalid algorithm\n
      |             ^~~~~~
./samples/SAFE/__tmp_f3aa6fc0.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f3aa6fc0.c:148:13: error: expected declaration or statement at end of input
